=== Merged changes from rebasing branches/feature-branch on to trunk r25817 ===

2007-09-30  Julien  <julien.chaffraix@gmail.com>

        Reviewed by aroben & eseidel.

        test http://bugs.webkit.org/show_bug.cgi?id=14898
        XMLHttpRequest.getAllResponseHeaders should separate headers with CRLF

        * http/tests/xmlhttprequest/xmlhttprequest-crlf-getAllResponseHeader.html: Added.

2007-09-29  Rob Buis  <buis@kde.org>

        Reviewed by Adam.

        Add testcase entries for:
        http://bugs.webkit.org/show_bug.cgi?id=13472
        Misparsing date in javascript leads to year value of -1
        http://bugs.webkit.org/show_bug.cgi?id=14176
        Some date values not handled consistently with IE/Firefox

        * fast/js/date-parse-test-expected.txt:
        * fast/js/resources/date-parse-test.js:

2007-09-28  Eric Seidel  <eric@webkit.org>

        Reviewed by Sam Wenig.
        
        Elements with a prefix cause ASSERT when creating WebArchive
        http://bugs.webkit.org/show_bug.cgi?id=15308

        * svg/custom/image-with-prefix-in-webarchive-expected.txt: Added.
        * svg/custom/image-with-prefix-in-webarchive.svg: Added.

2007-09-09  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Oliver.

        Update layout tests results after the <pattern> rework.

        * svg/W3C-SVG-1.1/coords-units-01-b-expected.checksum:
        * svg/W3C-SVG-1.1/coords-units-01-b-expected.png:
        * svg/W3C-SVG-1.1/pservers-grad-06-b-expected.checksum:
        * svg/W3C-SVG-1.1/pservers-grad-06-b-expected.png:
        * svg/batik/paints/gradientLimit-expected.checksum: Added.
        * svg/batik/paints/gradientLimit-expected.png: Added.
        * svg/batik/paints/gradientLimit-expected.txt: Added.
        * svg/batik/paints/gradientLimit.svg: Added.
        * svg/batik/paints/patternPreserveAspectRatioA-expected.checksum: Added.
        * svg/batik/paints/patternPreserveAspectRatioA-expected.png: Added.