@@ -1,3 +1,14 @@
+2007-10-01  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Oliver Hunt.
+        
+        WebArchives do not embed stylesheets referenced by xml-stylesheeet
+        http://bugs.webkit.org/show_bug.cgi?id=15320
+
+        * webarchive/resources/test-xml-stylesheet.css: Added.
+        * webarchive/test-xml-stylesheet-expected.txt: Added.
+        * webarchive/test-xml-stylesheet.xml: Added.
+
 === Merged changes from rebasing branches/feature-branch on to trunk r25817 ===
 
 2007-09-30  Julien  <julien.chaffraix@gmail.com>
